Correction Challenge Events avec Bonus

--- a/.env
+++ b/.env
@@ -31,3 +31,8 @@ DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.
 ###> symfony/mailer ###
 # MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
+
+### Message d'annonce de maintenance à activer avec la valeur true
+MAINTENANCE_ANNOUNCEMENT_ACTIVE=false
+MAINTENANCE_ANNOUNCEMENT_MESSAGE="Maintenance prévue mardi 3 juin à 16h00"
+
